--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <!-- vue-ssr-outlet-->
     <script src="./dist/build.js"></script>
   </body>
 </html>
