client side to get server data

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,9 @@
   </head>
   <body>
     <div id="app"></div>
+
     <!-- vue-ssr-outlet-->
+    <script src="./src/server.js"></script>
     <script src="./dist/build.js"></script>
   </body>
 </html>
