--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
 
     <!-- vue-ssr-outlet-->
-    <script src="./src/server.js"></script>
+    <script src="./server.js"></script>
     <script src="./dist/build.js"></script>
   </body>
 </html>
